# shelly_monitor

./: LICENSE  pyproject.toml  readme.md
src/: config.py  data.py  main.py  shelly_db.py  translator.py
src/assets/locales/: main_de_DE.json  main_en_EN.json
